# css-elasticity-aiops-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  ai_client.py  config.py  db.py  graph.py  logging_utils.py  main.py  prompts.py  runtime.py  scheduler.py  state.py
app/diagnostics/: __init__.py  base.py  opensearch_provider.py
app/executors/: __init__.py  base.py  css_executor.py  mock_css_executor.py
app/metrics/: __init__.py  base.py  css_provider.py  mock_provider.py
app/models/: actions.py  decisions.py  diagnostics.py  metrics.py
app/nodes/: ai_decide.py  build_history_summary.py  check_pending_operation.py  collect_metrics.py  detect_spike.py  execute_action.py  finalize_state.py  persist_run.py  should_run_ai_review.py  verify_result.py
app/repositories/: __init__.py  actions_repo.py  decisions_repo.py  metrics_repo.py  state_repo.py
app/services/: capacity_analyzer.py  cooldown.py  history_summary.py  policy_engine.py  scaling_advisor.py  spike_detector.py  strategy_profile.py  validation.py
tests/: test_action_rules.py  test_ai_parser.py  test_capacity_analyzer.py  test_history_summary.py  test_persistence.py  test_policy_engine.py  test_realtime_metrics.py  test_scaling_advisor.py  test_spike_detector.py  test_state_transitions.py  test_strategy_profile.py
