[project]
name = "css-elasticity-aiops-agent"
version = "0.1.0"
description = "LangGraph-based CSS Elasticity AIOps Agent for Huawei Cloud CSS"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.60",
  "openai>=1.50.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-json-logger>=2.0.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
